/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

import "google/protobuf/empty.proto";
import public "teamcloud/v1/adapter_information_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";

service AdapterAPI {
  rpc GetAdapters (google.protobuf.Empty) returns (AdapterInformationListDataResult);

}

