/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/component_task_data_result.proto";
import public "teamcloud/v1/component_task_definition.proto";
import public "teamcloud/v1/component_task_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";

service ComponentTasksAPI {
  rpc CancelComponentTask (CancelComponentTaskRequest) returns (ComponentTaskDataResult);

  rpc CreateComponentTask (CreateComponentTaskRequest) returns (ComponentTaskDataResult);

  rpc GetComponentTask (GetComponentTaskRequest) returns (ComponentTaskDataResult);

  rpc GetComponentTasks (GetComponentTasksRequest) returns (ComponentTaskListDataResult);

  rpc ReRunComponentTask (ReRunComponentTaskRequest) returns (ComponentTaskDataResult);

}

message CancelComponentTaskRequest {
  string organizationId = 1;
  string projectId = 2;
  string componentId = 3;
  string taskId = 4;

}

message CreateComponentTaskRequest {
  string organizationId = 1;
  string projectId = 2;
  string componentId = 3;
  ComponentTaskDefinition componentTaskDefinition = 4;

}

message GetComponentTaskRequest {
  string taskId = 1;
  string organizationId = 2;
  string projectId = 3;
  string componentId = 4;

}

message GetComponentTasksRequest {
  string organizationId = 1;
  string projectId = 2;
  string componentId = 3;

}

message ReRunComponentTaskRequest {
  string organizationId = 1;
  string projectId = 2;
  string componentId = 3;
  string taskId = 4;

}

