/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/component_template_data_result.proto";
import public "teamcloud/v1/component_template_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";

service ComponentTemplatesAPI {
  rpc GetComponentTemplate (GetComponentTemplateRequest) returns (ComponentTemplateDataResult);

  rpc GetComponentTemplates (GetComponentTemplatesRequest) returns (ComponentTemplateListDataResult);

}

message GetComponentTemplateRequest {
  string id = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetComponentTemplatesRequest {
  string organizationId = 1;
  string projectId = 2;

}

