/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/component_data_result.proto";
import public "teamcloud/v1/component_definition.proto";
import public "teamcloud/v1/component_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";

service ComponentsAPI {
  rpc CreateComponent (CreateComponentRequest) returns (ComponentDataResult);

  rpc DeleteComponent (DeleteComponentRequest) returns (StatusResult);

  rpc GetComponent (GetComponentRequest) returns (ComponentDataResult);

  rpc GetComponents (GetComponentsRequest) returns (ComponentListDataResult);

}

message CreateComponentRequest {
  string organizationId = 1;
  string projectId = 2;
  ComponentDefinition componentDefinition = 3;

}

message DeleteComponentRequest {
  string componentId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetComponentRequest {
  string componentId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetComponentsRequest {
  string organizationId = 1;
  string projectId = 2;
  bool deleted = 3;

}

