/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/deployment_scope.proto";
import public "teamcloud/v1/deployment_scope_data_result.proto";
import public "teamcloud/v1/deployment_scope_definition.proto";
import public "teamcloud/v1/deployment_scope_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";

service DeploymentScopesAPI {
  rpc CreateDeploymentScope (CreateDeploymentScopeRequest) returns (DeploymentScopeDataResult);

  rpc DeleteDeploymentScope (DeleteDeploymentScopeRequest) returns (DeploymentScopeDataResult);

  rpc GetDeploymentScope (GetDeploymentScopeRequest) returns (DeploymentScopeDataResult);

  rpc GetDeploymentScopes (GetDeploymentScopesRequest) returns (DeploymentScopeListDataResult);

  rpc UpdateDeploymentScope (UpdateDeploymentScopeRequest) returns (DeploymentScopeDataResult);

}

message CreateDeploymentScopeRequest {
  string organizationId = 1;
  DeploymentScopeDefinition deploymentScopeDefinition = 2;

}

message DeleteDeploymentScopeRequest {
  string organizationId = 1;
  string deploymentScopeId = 2;

}

message GetDeploymentScopeRequest {
  string organizationId = 1;
  string deploymentScopeId = 2;

}

message GetDeploymentScopesRequest {
  string organizationId = 1;

}

message UpdateDeploymentScopeRequest {
  string organizationId = 1;
  string deploymentScopeId = 2;
  DeploymentScope deploymentScope = 3;

}

