/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/command_audit_entity_data_result.proto";
import public "teamcloud/v1/command_audit_entity_list_data_result.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/string_list_data_result.proto";

service OrganizationAuditAPI {
  rpc GetAuditCommands (GetAuditCommandsRequest) returns (StringListDataResult);

  rpc GetAuditEntries (GetAuditEntriesRequest) returns (CommandAuditEntityListDataResult);

  rpc GetAuditEntry (GetAuditEntryRequest) returns (CommandAuditEntityDataResult);

}

message GetAuditCommandsRequest {
  string organizationId = 1;

}

message GetAuditEntriesRequest {
  string organizationId = 1;
  string timeRange = 2;
  repeated string commands = 3;

}

message GetAuditEntryRequest {
  string commandId = 1;
  string organizationId = 2;
  bool expand = 3;

}

