/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

import public "teamcloud/v1/organization.proto";

message OrganizationDataResult {

  int32 code = 3059181;

  optional string status = 355610639;

  Organization data = 3076010;

  optional string location = 290430904;

}
