/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";
import public "teamcloud/v1/user.proto";
import public "teamcloud/v1/user_data_result.proto";
import public "teamcloud/v1/user_definition.proto";
import public "teamcloud/v1/user_list_data_result.proto";

service OrganizationUsersAPI {
  rpc CreateOrganizationUser (CreateOrganizationUserRequest) returns (UserDataResult);

  rpc DeleteOrganizationUser (DeleteOrganizationUserRequest) returns (StatusResult);

  rpc GetOrganizationUser (GetOrganizationUserRequest) returns (UserDataResult);

  rpc GetOrganizationUserMe (GetOrganizationUserMeRequest) returns (UserDataResult);

  rpc GetOrganizationUsers (GetOrganizationUsersRequest) returns (UserListDataResult);

  rpc UpdateOrganizationUser (UpdateOrganizationUserRequest) returns (UserDataResult);

  rpc UpdateOrganizationUserMe (UpdateOrganizationUserMeRequest) returns (UserDataResult);

}

message CreateOrganizationUserRequest {
  string organizationId = 1;
  UserDefinition userDefinition = 2;

}

message DeleteOrganizationUserRequest {
  string userId = 1;
  string organizationId = 2;

}

message GetOrganizationUserRequest {
  string userId = 1;
  string organizationId = 2;

}

message GetOrganizationUserMeRequest {
  string organizationId = 1;

}

message GetOrganizationUsersRequest {
  string organizationId = 1;

}

message UpdateOrganizationUserRequest {
  string userId = 1;
  string organizationId = 2;
  User user = 3;

}

message UpdateOrganizationUserMeRequest {
  string organizationId = 1;
  User user = 2;

}

