/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/organization_data_result.proto";
import public "teamcloud/v1/organization_definition.proto";
import public "teamcloud/v1/organization_list_data_result.proto";
import public "teamcloud/v1/status_result.proto";

service OrganizationsAPI {
  rpc CreateOrganization (CreateOrganizationRequest) returns (OrganizationDataResult);

  rpc DeleteOrganization (DeleteOrganizationRequest) returns (StatusResult);

  rpc GetOrganization (GetOrganizationRequest) returns (OrganizationDataResult);

  rpc GetOrganizations (google.protobuf.Empty) returns (OrganizationListDataResult);

}

message CreateOrganizationRequest {
  OrganizationDefinition organizationDefinition = 1;

}

message DeleteOrganizationRequest {
  string organizationId = 1;

}

message GetOrganizationRequest {
  string organizationId = 1;

}

