/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/project_identity.proto";
import public "teamcloud/v1/project_identity_data_result.proto";
import public "teamcloud/v1/project_identity_definition.proto";
import public "teamcloud/v1/project_identity_list_data_result.proto";
import public "teamcloud/v1/status_result.proto";

service ProjectIdentitiesAPI {
  rpc CreateProjectIdentity (CreateProjectIdentityRequest) returns (ProjectIdentityDataResult);

  rpc DeleteProjectIdentity (DeleteProjectIdentityRequest) returns (ProjectIdentityDataResult);

  rpc GetProjectIdentities (GetProjectIdentitiesRequest) returns (ProjectIdentityListDataResult);

  rpc GetProjectIdentity (GetProjectIdentityRequest) returns (ProjectIdentityDataResult);

  rpc UpdateProjectIdentity (UpdateProjectIdentityRequest) returns (StatusResult);

}

message CreateProjectIdentityRequest {
  string organizationId = 1;
  string projectId = 2;
  ProjectIdentityDefinition projectIdentityDefinition = 3;

}

message DeleteProjectIdentityRequest {
  string projectIdentityId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetProjectIdentitiesRequest {
  string organizationId = 1;
  string projectId = 2;

}

message GetProjectIdentityRequest {
  string projectIdentityId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message UpdateProjectIdentityRequest {
  string projectIdentityId = 1;
  string organizationId = 2;
  string projectId = 3;
  ProjectIdentity projectIdentity = 4;

}

