/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/project_data_result.proto";
import public "teamcloud/v1/project_definition.proto";
import public "teamcloud/v1/project_list_data_result.proto";
import public "teamcloud/v1/status_result.proto";

service ProjectAPI {
  rpc CreateProject (CreateProjectRequest) returns (ProjectDataResult);

  rpc DeleteProject (DeleteProjectRequest) returns (StatusResult);

  rpc GetProject (GetProjectRequest) returns (ProjectDataResult);

  rpc GetProjects (GetProjectsRequest) returns (ProjectListDataResult);

}

message CreateProjectRequest {
  string organizationId = 1;
  ProjectDefinition projectDefinition = 2;

}

message DeleteProjectRequest {
  string projectId = 1;
  string organizationId = 2;

}

message GetProjectRequest {
  string projectId = 1;
  string organizationId = 2;

}

message GetProjectsRequest {
  string organizationId = 1;

}

