/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";
import public "teamcloud/v1/string_string_dictionary_data_result.proto";

service ProjectTagsAPI {
  rpc CreateProjectTag (CreateProjectTagRequest) returns (StatusResult);

  rpc DeleteProjectTag (DeleteProjectTagRequest) returns (StatusResult);

  rpc GetProjectTagByKey (GetProjectTagByKeyRequest) returns (StringStringDictionaryDataResult);

  rpc GetProjectTags (GetProjectTagsRequest) returns (StringStringDictionaryDataResult);

  rpc UpdateProjectTag (UpdateProjectTagRequest) returns (StatusResult);

}

message CreateProjectTagRequest {
  string organizationId = 1;
  string projectId = 2;
  // map&lt;string, string&gt; requestBody = 3;

}

message DeleteProjectTagRequest {
  string tagKey = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetProjectTagByKeyRequest {
  string tagKey = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetProjectTagsRequest {
  string organizationId = 1;
  string projectId = 2;

}

message UpdateProjectTagRequest {
  string organizationId = 1;
  string projectId = 2;
  // map&lt;string, string&gt; requestBody = 3;

}

