/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/project_template.proto";
import public "teamcloud/v1/project_template_data_result.proto";
import public "teamcloud/v1/project_template_definition.proto";
import public "teamcloud/v1/project_template_list_data_result.proto";

service ProjectTemplatesAPI {
  rpc CreateProjectTemplate (CreateProjectTemplateRequest) returns (ProjectTemplateDataResult);

  rpc DeleteProjectTemplate (DeleteProjectTemplateRequest) returns (ProjectTemplateDataResult);

  rpc GetProjectTemplate (GetProjectTemplateRequest) returns (ProjectTemplateDataResult);

  rpc GetProjectTemplates (GetProjectTemplatesRequest) returns (ProjectTemplateListDataResult);

  rpc UpdateProjectTemplate (UpdateProjectTemplateRequest) returns (ProjectTemplateDataResult);

}

message CreateProjectTemplateRequest {
  string organizationId = 1;
  ProjectTemplateDefinition projectTemplateDefinition = 2;

}

message DeleteProjectTemplateRequest {
  string projectTemplateId = 1;
  string organizationId = 2;

}

message GetProjectTemplateRequest {
  string projectTemplateId = 1;
  string organizationId = 2;

}

message GetProjectTemplatesRequest {
  string organizationId = 1;

}

message UpdateProjectTemplateRequest {
  string projectTemplateId = 1;
  string organizationId = 2;
  ProjectTemplate projectTemplate = 3;

}

