/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";
import public "teamcloud/v1/user.proto";
import public "teamcloud/v1/user_data_result.proto";
import public "teamcloud/v1/user_definition.proto";
import public "teamcloud/v1/user_list_data_result.proto";

service ProjectUsersAPI {
  rpc CreateProjectUser (CreateProjectUserRequest) returns (UserDataResult);

  rpc DeleteProjectUser (DeleteProjectUserRequest) returns (StatusResult);

  rpc GetProjectUser (GetProjectUserRequest) returns (UserDataResult);

  rpc GetProjectUserMe (GetProjectUserMeRequest) returns (UserDataResult);

  rpc GetProjectUsers (GetProjectUsersRequest) returns (UserListDataResult);

  rpc UpdateProjectUser (UpdateProjectUserRequest) returns (UserDataResult);

  rpc UpdateProjectUserMe (UpdateProjectUserMeRequest) returns (UserDataResult);

}

message CreateProjectUserRequest {
  string organizationId = 1;
  string projectId = 2;
  UserDefinition userDefinition = 3;

}

message DeleteProjectUserRequest {
  string userId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetProjectUserRequest {
  string userId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetProjectUserMeRequest {
  string organizationId = 1;
  string projectId = 2;

}

message GetProjectUsersRequest {
  string organizationId = 1;
  string projectId = 2;

}

message UpdateProjectUserRequest {
  string userId = 1;
  string organizationId = 2;
  string projectId = 3;
  User user = 4;

}

message UpdateProjectUserMeRequest {
  string organizationId = 1;
  string projectId = 2;
  User user = 3;

}

