/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/schedule.proto";
import public "teamcloud/v1/schedule_data_result.proto";
import public "teamcloud/v1/schedule_definition.proto";
import public "teamcloud/v1/schedule_list_data_result.proto";

service ScheduleAPI {
  rpc CreateSchedule (CreateScheduleRequest) returns (ScheduleDataResult);

  rpc GetSchedule (GetScheduleRequest) returns (ScheduleDataResult);

  rpc GetSchedules (GetSchedulesRequest) returns (ScheduleListDataResult);

  rpc RunSchedule (RunScheduleRequest) returns (ScheduleDataResult);

  rpc UpdateSchedule (UpdateScheduleRequest) returns (ScheduleDataResult);

}

message CreateScheduleRequest {
  string organizationId = 1;
  string projectId = 2;
  ScheduleDefinition scheduleDefinition = 3;

}

message GetScheduleRequest {
  string scheduleId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message GetSchedulesRequest {
  string organizationId = 1;
  string projectId = 2;

}

message RunScheduleRequest {
  string scheduleId = 1;
  string organizationId = 2;
  string projectId = 3;

}

message UpdateScheduleRequest {
  string scheduleId = 1;
  string organizationId = 2;
  string projectId = 3;
  Schedule schedule = 4;

}

