/*
  TeamCloud

  API for working with a TeamCloud instance.

  The version of the OpenAPI document: v1

  Contact: colbyw@microsoft.com

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package colbylwilliams.teamcloud.v1;

option go_package = "github.com/colbylwilliams/clutch-teamcloud-gateway/backend/api/teamcloud/v1;teamcloudv1";

// import "google/protobuf/empty.proto";
import public "teamcloud/v1/error_result.proto";
import public "teamcloud/v1/status_result.proto";

service StatusAPI {
  rpc GetProjectStatus (GetProjectStatusRequest) returns (StatusResult);

  rpc GetStatus (GetStatusRequest) returns (StatusResult);

}

message GetProjectStatusRequest {
  string projectId = 1;
  string trackingId = 2;
  string organizationId = 3;

}

message GetStatusRequest {
  string trackingId = 1;
  string organizationId = 2;

}

